--- a/pom.xml
+++ b/pom.xml
@@ -9,6 +9,11 @@
     <version>1.0.0-SNAPSHOT</version>
 
     <properties>
+    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+    <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
+</properties>
+         
+    <properties>
         <web3j.version>3.6.0</web3j.version>
         <logback-classic.version>1.2.3</logback-classic.version>
         <web3j-maven-plugin.version>0.3.7</web3j-maven-plugin.version>
